--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,14 @@
         <div class="speechBubble" >
           <div class="tail"></div> 
         </div>
-        <textarea id="storyText" cols="120" rows="5" placeholder="Tell me a story..."></textarea>
+        <textarea id="createText" cols="120" rows="5" placeholder="Tell me a story..."></textarea>
         
         <!-- Button has type="button" (vs the default "submit"). Thus,
           JavaScript is free to process the form, without page reload. -->
-        <button id="goButton" type="button">GO</button>
+        <div id="submitArea">
+          <label>Move the map to locate your story.</label>
+          <button id="goButton" type="button">GO</button>
+        </div>
       </form>
     </div> 
   </section>
